manifests/test/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/target: conohav2-1.pstr.space
  name: nginx
  namespace: default
spec:
  ingressClassName: traefik-external
  rules:
  - host: nginx.str08.net
    http:
      paths:
      - backend:
          service:
            name: nginx
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - nginx.str08.net
    secretName: nginx.str08.net-dns01
