manifests/test/nginx/manifest.yaml
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx
  name: nginx
  namespace: default
spec:
  containers:
  - image: nginx:1.28
    name: nginx
    resources:
      limits:
        cpu: 200m
        memory: 731Mi
      requests:
        cpu: 100m
        memory: 512Mi
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: nginx
  name: nginx
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: nginx
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/target: conohav2-1.pstr.space
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
  name: nginx
  namespace: default
spec:
  ingressClassName: traefik-external
  rules:
  - host: nginx.pstr.space
    http:
      paths:
      - backend:
          service:
            name: nginx
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - nginx.pstr.space
    secretName: nginx.pstr.space-dns01
